plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.capstone'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {


    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    //implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //swagger
    implementation 'io.swagger.core.v3:swagger-annotations:2.2.22'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'

    // Kafka
    implementation 'org.springframework.kafka:spring-kafka'

    //elasticsearch
    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
    implementation 'org.elasticsearch.client:elasticsearch-rest-client'
    implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.17.27'

    // websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket:3.4.2'

    // localdatetime을 직렬화/역직렬화 하기 위함.
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.2'

    //embeddable, enumerate
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'

    // redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.4.2'
    implementation 'org.redisson:redisson-spring-boot-starter:3.23.2'


    //JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // mail
    implementation 'com.sun.mail:jakarta.mail:2.0.1'

    //webclient
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    //OAuth2.0
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'


    implementation 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'

//    implementation 'org.springframework.boot:spring-boot-starter-mustache'
    implementation 'com.github.iamport:iamport-rest-client-java:0.2.23'

}

tasks.named('test') {
	useJUnitPlatform()
}
